# kubeflow-pipeline

./: README.md  pipeline.py
data-loader/: Dockerfile  build-image.sh  download_10k_raw.py  pyproject.toml  requirements.txt
data-loader/src/: config.cfg.template
deploy_model/: Dockerfile  build_image.sh
download_data/: Dockerfile  build-image.sh  download_data.py
kfp-components/: README.md  data_loader_comp.yaml  docai_pipeline.ipynb  docai_pipeline.py  spark_delta_comp.yaml
spark-delta/: Dockerfile  build-image.sh  config.cfg.template  pyproject.toml  run-spark-delta.py
spark-delta/src/: run-spark-delta.py
spark-job/: Dockerfile  build-image.sh  run_spark_job.py
test_model/: Dockerfile  build-image.sh  test_model.py
train_model/: Dockerfile  build-image.sh  train_model.py
