[tool.poetry]
name = "spark-delta"
version = "1.0.0"
description = ""
authors = ["Charles Adetiloye <charles@coterie-ai.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
requests = "^2.27.1"
click = "^8.1.3"
bs4 = "^0.0.1"
html-table-parser-python3 = "0.2.0"
azure-storage-file-datalake = "^12.6.0"
lxml = "4.8.0"
PyYAML ="^6.0"
pydantic-yaml="^0.6.3"
pyspark ="^3.2.1"
delta-spark="^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

